src/shared_lib/celestial.h

typedef struct UT1Time {
  bool     valid;    /* Indicates if the result is valid. */
  int32_t  year;     /* The year. */
  uint32_t month;    /* The month. */
  uint32_t day;      /* The day. */
  double   fraction; /* The fraction of the day, in the range [0.0, 1.0). */
} UT1Time;
/**
 * @brief Convert Julian Ephemeris Day Number (JDE) to UT1 datetime.
 * @param jde The julian ephemeris day number, which is based on TT.
 * @returns A `UT1Time` struct.
 */
CELESTIAL_API UT1Time jde_to_ut1(double jde);
/* ---------- Solar Longitude Roots ---------- */

typedef struct Discriminant {
  bool     valid; /* Indicates if the result is valid. */
  uint32_t count; /* The count of the roots, which is 0, 1, or 2. */
} Discriminant;
/**
 * @brief Calculate the JDE discriminant — count how many times the Sun reaches the given
 *        geocentric `longitude` in the given `year`.
 * @param year The year.
 * @param longitude The geocentric longitude.
 * @returns A `Discriminant` struct; `count` is 0, 1, or 2: the Sun won't reach the longitude
 *          in the year, reaches it once, or reaches it twice.
 */
CELESTIAL_API Discriminant solar_lon_root_discriminant(int32_t year, double longitude);
/**
 * @brief Find the JDE(s) at which the Sun reaches `longitude` in `year`, written to `slots`.
 * @param year The year.
 * @param longitude The geocentric longitude.
 * @param slots The output slots, allocated and freed by the caller; may be null only when
 *              `slot_count` is 0.
 * @param slot_count The count of slots.
 * @returns How many slots are written.
 */
CELESTIAL_API uint32_t solar_lon_roots(int32_t year, double longitude, double *slots, uint32_t slot_count);
/* ---------- Sun Moon Conjunction ---------- */

/**
 * @brief Find the next `slot_count` new-moon JDE(s) after `jde`, written to `slots`.
 * @param jde The julian ephemeris day number, which is based on TT.
 * @param slots The output slots, allocated and freed by the caller; may be null only when
 *              `slot_count` is 0.
 * @param slot_count The count of slots.
 * @returns How many slots are written.
 */
CELESTIAL_API uint32_t new_moons_after_jde(double jde, double *slots, uint32_t slot_count);
/**
 * @brief Find the new-moon JDE(s) in `year`; the total count goes to `root_count`,
 *        up to `slot_count` of them are written to `slots`.
 * @param year The Gregorian year.
 * @param root_count Where the total count of the roots is written. Must not be null.
 * @param slots The output slots, allocated and freed by the caller; may be null only when
 *              `slot_count` is 0.
 * @param slot_count The count of slots.
 * @returns How many slots are written.
 */
CELESTIAL_API uint32_t new_moons_in_year(int32_t year, uint32_t *root_count, double *slots, uint32_t slot_count);
/* ---------- Solar Time ---------- */

typedef struct EquationOfTime {
  bool   valid; /* Indicates if the result is valid. */
  double value; /* E in degrees of hour angle; x240 for seconds of time. */
} EquationOfTime;
/**
 * @brief Compute the equation of time E = apparent solar time - mean solar time
 *        (Meeus ch. 28).
 * @param jde The julian ephemeris day number, which is based on TT.
 * @returns An `EquationOfTime` struct; `value` is E in degrees of hour angle
 *          (x240 = seconds of time).
 */
CELESTIAL_API EquationOfTime equation_of_time(double jde);
typedef struct ApparentSolarTime {
  bool     valid;    /* Indicates if the result is valid. */
  int32_t  year;     /* The year of the local apparent solar date. */
  uint32_t month;    /* The month of the local apparent solar date. */
  uint32_t day;      /* The day of the local apparent solar date. */
  double   fraction; /* The fraction of the local apparent solar day, in the range [0.0, 1.0). */
} ApparentSolarTime;
/**
 * @brief Convert a civil UTC moment to local apparent (true) solar time.
 * @param y The year (UTC).
 * @param m The month (UTC).
 * @param d The day (UTC).
 * @param fraction The fraction of the day (UTC). Must be in the range [0.0, 1.0).
 * @param longitude The observer's geographic longitude in degrees, positive east, in [-180, 180].
 * @returns An `ApparentSolarTime` struct; the local apparent solar date may differ from the
 *          input UTC date — a large enough longitude shifts the moment across midnight.
 */
CELESTIAL_API ApparentSolarTime apparent_solar_time(int32_t y, uint32_t m, uint32_t d, double fraction, double longitude);
/* ---------- Sidereal Time ---------- */

typedef struct SiderealTime {
  bool   valid; /* Indicates if the result is valid. */
  double value; /* The local apparent sidereal time, in degrees, in [0, 360). */
} SiderealTime;
/**
 * @brief Compute the Local Apparent Sidereal Time (LAST) for an observer.
 * @param jd_ut1 The julian day number, which is based on **UT1**. Declared domain:
 *        Gregorian years in [401, 32766].
 * @param longitude The observer's geographic longitude in degrees, positive east, in [-180, 180].
 * @returns A `SiderealTime` struct. The ΔT model is the library default (algo5) and the
 *          nutation model is IAU 1980 — both baked in, matching the other single-default
 *          entry points.
 */
CELESTIAL_API SiderealTime local_apparent_sidereal_time(double jd_ut1, double longitude);
/* ---------- Jieqi ---------- */

typedef struct JieqiMomentQuery {
  bool     valid;  /* Indicates if the result is valid. */
  uint8_t  jq_idx; /* The index of the Jieqi, in the range [0, 24). */
  int32_t  y;      /* The year. */
  uint32_t m;      /* The month. */
  uint32_t d;      /* The day. */
  double   frac;   /* The fraction of the day, in the range [0.0, 1.0). */
} JieqiMomentQuery;
/**
 * @brief Query the accurate UT1 moment of the Jieqi in the given `year`.
 * @param year The year, in gregorian calendar.
 * @param jq_idx The index of the Jieqi. Expected to be in the range [0, 24).
 * @returns A `JieqiMomentQuery` struct.
 * @note The returned civil moment is UT1; while leap seconds are applied it matches UTC
 *       to within DUT1 (±0.9 s), so modern-era civil consumers may treat it as UTC.
 *       Past the ΔAT table freeze the modelled gap follows ΔT−(ΔAT+32.184) (#115).
 */
CELESTIAL_API JieqiMomentQuery query_jieqi_moment(int32_t year, uint8_t jq_idx);
/**
 * @brief Write the Chinese name of the Jieqi to `buf`.
 * @param jq_idx The index of the Jieqi. Expected to be in the range [0, 24).
 * @param buf The name memory, allocated and freed by the caller.
 * @param buf_size Maximum bytes that can be written to `buf`.
 * @returns `true` if the name is successfully written to `buf`.
 */
CELESTIAL_API bool get_jieqi_name(uint8_t jq_idx, char *buf, uint32_t buf_size);
/* ---------- Lunar Calendar ---------- */

typedef struct SupportedLunarYearRange {
  bool    valid; /* Indicates if the result is valid. */
  int32_t start; /* The first supported lunar year. */
  int32_t end;   /* The last supported lunar year. */
} SupportedLunarYearRange;
/**
 * @brief Get the supported lunar year range of the algorithm.
 * @param algo The algorithm. Expected to be 1, 2, or 3.
 * @returns A `SupportedLunarYearRange` struct.
 */
CELESTIAL_API SupportedLunarYearRange get_supported_lunar_year_range(uint8_t algo);
typedef struct LunarYearInfo {
  bool     valid;      /* Indicates if the result is valid. */
  int32_t  year;       /* Gregorian year of the first day of the lunar year. */
  uint8_t  month;      /* Gregorian month of the first day of the lunar year. */
  uint8_t  day;        /* Gregorian day of the first day of the lunar year. */
  uint8_t  leap_month; /* The leap month (1-12) in **traditional** numbering, or 0 if none. */
  uint16_t month_len;  /* Least 12/13 bits, one per month in calendar order (bit 0 = the first
                          month): 1 = 30-day month, 0 = 29-day month. A leap month occupies a
                          bit of its own, so with `leap_month = 2` the bits run 1, 2, leap 2,
                          3, … `gregorian_to_lunar` / `lunar_to_gregorian` below instead speak
                          traditional numbering + `is_leap`, where that leap month is
                          `month = 2, is_leap = true`. */
} LunarYearInfo;
/**
 * @brief Get the lunar year information for the given year.
 * @param algo The algorithm. Expected to be 1, 2, or 3.
 * @param year The lunar year. Outside the range `get_supported_lunar_year_range` reports for
 *             `algo`, the result is `valid = false`.
 * @returns A `LunarYearInfo` struct.
 */
CELESTIAL_API LunarYearInfo get_lunar_year_info(uint8_t algo, int32_t year);
typedef struct LunarDate {
  bool    valid;   /* Indicates if the result is valid. */
  int32_t year;    /* The lunar year. */
  uint8_t month;   /* The lunar month, in traditional numbering (1-12). */
  bool    is_leap; /* Whether the month is the leap month. */
  uint8_t day;     /* The day of the lunar month. */
} LunarDate;
typedef struct GregorianDate {
  bool    valid; /* Indicates if the result is valid. */
  int32_t year;  /* The year. */
  uint8_t month; /* The month. */
  uint8_t day;   /* The day. */
} GregorianDate;
/**
 * @brief Convert a Gregorian date to a lunar date.
 * @param algo The algorithm. Expected to be 1, 2, or 3.
 * @param year The Gregorian year.
 * @param month The Gregorian month.
 * @param day The Gregorian day of the month.
 * @returns A `LunarDate` struct; `valid = false` when `algo` is unknown, the input is not a
 *          real Gregorian date, or it falls outside the Gregorian span the algorithm covers —
 *          that span runs from the first day of lunar year `start` to the last day of lunar
 *          year `end` (`start`/`end` as `get_supported_lunar_year_range` reports them), so it
 *          begins and ends mid-Gregorian-year at both ends.
 * @note The lunar month is in **traditional numbering** (1-12) plus the `is_leap` flag —
 *       a leap month carries its predecessor's number with `is_leap = true`: in lunar 2023
 *       (leap 2nd month), the leap 2nd month is `month = 2, is_leap = true`, and the
 *       traditional 3rd month is `month = 3, is_leap = false`. This is NOT the positional
 *       month index that `LunarYearInfo.month_len` is indexed by.
 */
CELESTIAL_API LunarDate gregorian_to_lunar(uint8_t algo, int32_t year, uint8_t month, uint8_t day);
/**
 * @brief Convert a lunar date to a Gregorian date.
 * @param algo The algorithm. Expected to be 1, 2, or 3.
 * @param year The lunar year.
 * @param month The lunar month, in traditional numbering (1-12) — see `gregorian_to_lunar`.
 * @param is_leap Whether the month is the leap month. `true` is accepted only on the year's
 *                actual leap month — `month = 2` in lunar 2023, and no month at all in a year
 *                that has none.
 * @param day The day of the lunar month.
 * @returns A `GregorianDate` struct; `valid = false` when the input does not name a real
 *          lunar date (bad `algo`, year out of range, no such leap month, day out of range).
 */
CELESTIAL_API GregorianDate lunar_to_gregorian(uint8_t algo, int32_t year, uint8_t month, bool is_leap, uint8_t day);